--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Achivements Section -->
         <section class="achivements-container">
             <div class="author-img">
-                <img src="../images/person.png" alt="">
+                <img src="images/person.png" alt="">
             </div>
             <div class="author-achivements">
                 <h3>My failures of previous year</h3>
@@ -44,22 +44,22 @@
         <h3 class="section-title">My Plans</h3>
         <div class="my-plans-items">
             <div class="plan-item">
-                <img src="../images/icons/web.png" alt="">
+                <img src="images/icons/web.png" alt="">
                 <h4 class="section-title">Web Development</h3>
                 <p>I want to start</p>
             </div>
             <div class="plan-item">
-                <img src="../images/icons/js.png" alt="">
+                <img src="images/icons/js.png" alt="">
                 <h4 class="section-title">Web Development</h3>
                 <p>I want to start</p>
             </div>
             <div class="plan-item">
-                <img src="../images/icons/smoke.png" alt="">
+                <img src="images/icons/smoke.png" alt="">
                 <h4 class="section-title">Web Development</h3>
                 <p>I want to start</p>
             </div>
             <div class="plan-item">
-                <img src="../images/icons/ecom.png" alt="">
+                <img src="images/icons/ecom.png" alt="">
                 <h4 class="section-title">Web Development</h3>
                 <p>I want to start</p>
             </div>
@@ -105,9 +105,9 @@
             <p>Email : info@gmail.com</p>
             <p>Phone : 01500 00 00 00</p>
 
-            <a href=""><img src="../images/icons/fb.png" alt=""></a>
-            <a href=""><img src="../images/icons/twitter.png" alt=""></a>
-            <a href=""><img src="../images/icons/youtube.png" alt=""></a>
+            <a href=""><img src="images/icons/fb.png" alt=""></a>
+            <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            <a href=""><img src="images/icons/youtube.png" alt=""></a>
         </div>
         <div class="footer-subscription-area">
             <h4>Subscribe</h4>
