--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/15fac36a30.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header class="hide">
         <section class="banner-container">
             <div class="banner-contents">
             <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
@@ -71,7 +71,7 @@
     </section>
 
     <!-- Service Section -->
-    <section class="service-section">
+    <section class="service-section hide">
         <h3 class="section-title">Price & Service</h3>
         <p class="service-description" style="color: black; text-align: center; margin-top: -20px; margin-bottom: 40px;">All Price And Services Are Discussed Below</p>
     <div class="service-container">
@@ -98,7 +98,7 @@
     </main>
 
     <!-- Footer Section -->
-    <footer>
+    <footer class="hide">
         <div class="footer-information">
             <h3>Future</h3>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
