--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/15fac36a30.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="hide">
+    <header class="">
         <section class="banner-container">
             <div class="banner-contents">
             <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
